fix(a2-2827): escape truncated text correctly

--- a/packages/forms-web-app/src/sass/expand-collapse-comments.scss
+++ b/packages/forms-web-app/src/sass/expand-collapse-comments.scss
@@ -5,3 +5,11 @@
 .js-enabled .toggle-button {
     display: inline;
 }
+
+.data-truncated-text {
+    display: none;
+}
+
+.data-full-text {
+    display: none;
+}
